style.css
* {
    box-sizing: border-box;
}

a {
    text-decoration: inherit;
    color: inherit;
    font-size: 20px;
}

body {
    font-family: 'Roboto Condensed', sans-serif;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-left: 0;
    margin-right: 0;
}

header {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 33px;
    
}

main {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    width: 1000px;
    height: 700px;
}
nav {
    width: 100%;
    display: flex;
    justify-content: center;
    background-image:
    linear-gradient(
      rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)
    );
}

nav div {
    width: 1000px;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: space-around;
    
}

.logo img {
    height: 54px;
    margin: 33px 0;
}

/* Início pág Main */
.principal {
    width: 600px;
    height: 700px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: rgba(163, 39, 39, 0.2);
    position: relative;
}

.principal h1 {
    position: absolute;
    top: 0;
    left: 0;
    width: calc(100% - 20px);
    padding: 20px;
    font-size: 42px;
    font-weight: 700;
    color: white;
    text-align: left;
    text-shadow: 0 0 5px rgba(0, 0, 0, 0.8);     
}

.principal p {
    position: absolute;
    bottom: 0;
    left: 0;
    width: calc(100% - 20px);
    padding: 20px;
    font-size: 15px;
    font-weight: 500;
    color: white;
    z-index: 1;
    text-align: justify;
}

.artigos {
    width: 400px;
    height: 700px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;    
    position: relative;
    cursor: pointer;
}

.artigo {
    height: 200px;
    width: calc(100% - 20px);
    margin-left: 20px;
    border-radius: 20px; 
    position: relative;
}

.artigo::after,
.principal::after {
    border-radius: 20px;
    content: '';
    position: absolute;
    left: 0; bottom: 0;
    width: 100%; height: 60%;
    background: linear-gradient(rgba(0, 0, 0, 0.0),rgba(0, 0, 0, 0.9));
}

.artigo img,
.principal img  {       
    width: 100%;
    height: 100%;
    border-radius: 20px;
    object-fit: cover;    
}

.artigo h4 {
    position: absolute;
    bottom: 0;
    right: 0;
    width: calc(100% - 20px);
    padding: 20px;
    font-size: 20px;
    font-weight: 700;
    color: white;
    text-align: end;
    text-shadow: 0 0 5px rgba(0, 0, 0, 0.8);     
}

/* Fim pág Main */

/* Início pág2 */

.first_container{
    width: 481px;
    height: 698px;
    border: 1px solid black;
    background-color: rgb(245, 245, 245);
    text-align: justify;
    display: flex;
    flex-direction: column;
}
.text_container{
    text-indent: 2em;
    padding-left: 20px;
    padding-right: 20px;
}

.first_img {
    background-image: url(https://entrelementos.com/wp-content/uploads/2020/09/1086773.jpg);
    width: 479px;
    height: 270px;
    background-size: cover;
    display: flex;
    align-items: flex-end;
}

.first_img h1,.second_container h1{
    font-size: 30px;
    margin: 0;
    color: bisque;
    text-shadow: 2px 2px 1px black;
    margin-left: 2.5%;
    margin-right: 2.5%;
}

.second_container {
    width: 481px;
    height: 330px;
    border: 1px solid black;
    background-size: cover;
    display: flex;
    align-items: flex-end;
    background-position: center;
    text-align: justify;
}

.second_container:first-child {
    background-image: url(https://legadodamarvel.com.br/wp-content/uploads/2021/05/invencivel-imagem-omni-man-legadodamarvel.jpg);
    
} 

.second_container:last-child {
    background-image: url(https://i0.wp.com/ptanime.com/wp-content/uploads/2018/10/shingeki_no_kyojin_3_ep48_executioner_from_hell.jpg);
}

.news_tab{
    display: flex;
    justify-content: space-between;
    width: 1000px;
}

.inner_tab{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.news_center{
    display: flex;
    justify-content: center;
}

/* Fim pág2 */

